Fixed. #6の課題が完了しました。

--- a/traning2-1-1/traning2-1-1/Base.lproj/Localizable.strings
+++ b/traning2-1-1/traning2-1-1/Base.lproj/Localizable.strings
@@ -6,4 +6,4 @@
   Copyright © 2017年 MAC管理者 STV. All rights reserved.
 */
 
-"I'm started Obj-C lessn." = "Obj-C講座をスタートしました。";
+"I'm started Obj-C lesson." = "Obj-C講座をスタートしました。";
